# openlist-finder

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
.claude/: hooks.json  project-commands.json  settings.local.json
.claude/hooks/: commit-msg.sh  dev-commands.sh
.github/workflows/: build.yml  ci.yml  release.yml
release-notes/: v0.1.0.md  v0.2.0.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: keyring.rs  log.rs  mcp.rs  mcp_server.rs  meilisearch.rs  mod.rs  openlist.rs  server_config.rs  sync.rs
src-tauri/src/config/: app_config.rs
src-tauri/src/models/: meilisearch.rs  mod.rs  openlist.rs
src-tauri/src/services/: log_manager.rs  meilisearch.rs  mod.rs  openlist.rs
src/components/: ArchivePreview.tsx  AudioPreview.tsx  Breadcrumb.tsx  ErrorBoundary.tsx  FileList.tsx  FolderTree.tsx  ImagePreview.tsx  PasswordInput.tsx  Sidebar.tsx  ThemeProvider.tsx  ToastContainer.tsx  VideoPreview.tsx  index.ts
src/components/previews/: ArchivePreview.tsx  AudioPreview.tsx  CsvPreview.tsx  ImagePreview.tsx  PdfPreview.tsx  TextPreview.tsx  UnsupportedPreview.tsx  VideoPreview.tsx  index.ts  types.ts
src/hooks/: index.ts  useFileBrowser.ts  useTheme.ts
src/pages/: HomePage.tsx  LogViewerPage.tsx  SettingsPage.tsx  index.ts
src/services/: index.ts  indexManager.ts  keyringService.ts  logForwarder.ts  meilisearch.ts  openlist.ts  serverConfigService.ts  tauriStoreService.ts
src/stores/: fileBrowserStore.ts  index.ts  searchStore.ts  serverStore.ts  settingsStore.ts  toastStore.ts
src/styles/: index.css
src/types/: app.ts  index.ts  mcp.ts  meilisearch.ts  openlist.ts
src/utils/: crypto.ts  fileSorting.ts  fileTypes.tsx  logger.ts
